fix: fix a bug that caused side menu to be visible at unintended screen widths

--- a/src/components/SideMenu/SideMenu.css
+++ b/src/components/SideMenu/SideMenu.css
@@ -53,7 +53,7 @@ ul {
     cursor: initial;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 700px) {
     .sideMenu {
         z-index: 1;
         position: fixed;
